--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">      
       <table class="numpad">
         <tr class="display">
-          <td colspan=""></td>
+          <td colspan="4"></td>
         </tr>
         <tr>
           <td>AC</td>
